--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "dev": "ts-node-dev --respawn --transpileOnly ./app/server.ts",
     "prod": "tsc && node ./build/server.js",
     "updateBasedOn": "tsc && node ./build/api/batch/update-based-on.js",
-    "updatePositionCorrection": "tsc && node ./build/api/batch/update-position-correction.js"
+    "updatePositionCorrection": "tsc && node ./build/api/batch/update-position-correction.js",
+    "updateThumbnail": "ts-node-dev --expose_gc --max_old_space_size=4096 --transpileOnly ./app/api/batch/update-thumbnail.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.6.1",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "express-recaptcha": "^5.0.1",
+    "jimp": "^0.14.0",
     "jsdom": "^16.3.0",
     "jsdom-global": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
