--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "generateGroups": "ts-node-dev --expose_gc --max_old_space_size=4096 --transpileOnly ./app/api/batch/generate-groups.ts",
     "generateWhite": "ts-node-dev --expose_gc --max_old_space_size=4096 --transpileOnly ./app/api/batch/generate-white.ts",
     "generateRepack": "ts-node-dev --expose_gc --max_old_space_size=4096 --transpileOnly ./app/api/batch/generate-repack.ts",
+    "fixHtmlLabels": "ts-node-dev --expose_gc --max_old_space_size=4096 --transpileOnly ./app/api/batch/fix-html-labels.ts",
     "testCanvas": "ts-node-dev --expose_gc --max_old_space_size=4096 --transpileOnly ./app/api/batch/test-canvas.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsdom": "^16.2.3",
     "canvas": "^2.6.1",
-    "csharp-binary-stream": "^1.0.2",
     "crypto-js": "^3.1.9-1",
+    "csharp-binary-stream": "^1.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
