--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc -b",
-    "dev": "ts-node-dev --respawn --transpileOnly ./app/server.ts",
+    "dev": "ts-node-dev --respawn ./app/server.ts",
     "prod": "tsc -b && node ./build/server.js",
     "updateBasedOn": "tsc && node ./build/api/batch/update-based-on.js",
     "updatePositionCorrection": "tsc && node ./build/api/batch/update-position-correction.js",
@@ -27,32 +27,31 @@
     "csharp-binary-stream": "^1.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-jwt": "^5.3.1",
+    "express-jwt": "^6.1.0",
     "express-recaptcha": "^5.0.1",
     "helmet": "^4.1.0",
     "jimp": "^0.14.0",
     "jsdom": "^16.3.0",
     "jsdom-global": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.7",
+    "mongoose": "^6.1.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pixi.js-legacy": "^5.3.0",
-    "request-ip": "^2.1.3",
-    "ts-node-dev": "^1.0.0-pre.43",
-    "typescript": "~3.5.3"
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
     "@types/crypto-js": "^3.1.43",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
-    "@types/express-jwt": "0.0.42",
+    "@types/express-jwt": "^6.0.4",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/mongodb": "^3.3.6",
-    "@types/mongoose": "^5.5.23",
     "@types/passport": "^1.0.1",
     "@types/passport-local": "^1.0.33",
     "@types/request-ip": "0.0.34",
-    "tslint": "^5.20.0"
+    "ts-node-dev": "^1.1.8",
+    "tslint": "^5.20.1",
+    "typescript": "^4.5.4"
   }
 }
